mfe2grpc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe2grpc
  namespace: authtest
  labels:
    app: mfe2grpc
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: mfe2grpc
  type: NodePort
